<resources>
    <string name="app_name">Pencatat Pelanggaran</string>
    <string name="image_decs">image decs</string>
    <string name="login_title">Pencatat \nPelanggaran \nSiswa</string>
    <string name="smkncimahi">SMK Negeri 1 Cimahi</string>
    <string name="NIP">NIP</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="title_admin">Module Title</string>
    <string name="title_gurubk">Guru</string>
    <string name="title_activity_guru">GuruActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>